--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "@pixi/particle-emitter": "^5.0.8",
     "pixi.js": "^8.2.6"
   }
 }
